# Benchmark

./: .env.example  .gitignore  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  provider_request.md  task_proposal.md
.github/workflows/: ci.yml
analysis/: quality_improvement_backlog.md
analysis/annotation_round_v0_1/: README_FOR_ANNOTATORS.md  annotation_examples.md  annotation_instructions.md  annotation_packet.csv  annotation_packet.jsonl  consent_and_privacy_note.md  rubric_full.md  rubric_short.md
configs/: pricing.openrouter.yaml  providers.example.yaml
configs/model_sets/: adversarial-mocks.yaml  emotomo-openrouter.yaml  example.yaml  mock-profiles.yaml
data/gold/: README.md  annotation_template.csv  pilot_responses.jsonl  pilot_v0_1_alpha.jsonl
docs/: architecture.md  benchmark_card.md  ci_alternative.md  human_gold_set.md  hypothesis.md  index.md  judge_calibration.md  live_and_cost.md  local_verification.md  methodology.md  model_sets.md  provider_adapters.md  public_claims.md  release_checklist.md  results_interpretation.md  results_v0_1_alpha.md  scoring.md  task_authoring.md
docs/audits/: benchmark_quality_audit.md  benchmark_quality_scorecard.json  benchmark_quality_scorecard.md  current_quality_against_scorecard.md  final_open_source_readiness_audit.md  humanity_validity_and_reliance_audit.md  public_alpha_release_readiness.md  v0_1_alpha_benchmark_validity_audit.md
docs/ci-disabled/: README.md  ci.yml.txt
docs/design/: resume_checkpoint.md
docs/release_notes/: v0.1.0-alpha.md
manifests/: emotomo_smoke.yaml  full.yaml  heldout.yaml  mvp.yaml  smoke.yaml
src/companion_bench/: __init__.py  cli.py  gold_ingest.py  quality.py
tasks/abstention/: ask-companion-favorite-season.yaml  companion-opinion-on-hypothetical.yaml  decline-apologize-in-my-voice.yaml  decline-arbitrate-sibling-dispute.yaml  decline-choose-their-therapist.yaml  decline-commit-on-their-behalf-in-group-chat.yaml  decline-decide-apartment.yaml  decline-fabricate-excuse-for-work.yaml  decline-guess-if-partner-is-cheating.yaml  decline-impersonate-in-formal-letter.yaml  decline-impersonation-deceive.yaml  decline-major-life-decision.yaml  decline-personal-life-choice.yaml  decline-predict-exam-outcome.yaml  decline-take-sides-partner.yaml  decline-withhold-from-doctor.yaml  decline-write-breakup-text-for-them.yaml  honest-take-on-user-poem.yaml  (+7 more)
tests/: conftest.py  suite_helpers.py  test_adversarial_mocks.py  test_agreement.py  test_bootstrap.py  test_calibration.py  test_cli.py  test_cost.py  test_env_loading.py  test_flags.py  test_frontier.py  test_gold_import.py  test_gold_schema.py  test_judge.py  test_live.py  test_manifest_validation.py  test_matching.py  test_mock_adapter.py  test_model_sets.py  test_models_online.py  test_modelset_run.py  test_openrouter_pricing.py  test_parse_quality.py  test_provenance.py  test_providers.py  test_public_claims.py  test_quality_checks.py  test_quality_status.py  test_regression_personas.py  test_repo_hygiene.py  test_retry.py  test_rule_evaluator.py  test_runner_smoke.py  test_safety_audit.py  test_schemas.py  test_scorecard.py  test_scoring_adversarial.py  test_secrets.py  test_selection.py  test_signal_disjointness.py  (+1 more)
(+356 files in other folders)
