[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "companion-bench"
version = "0.1.0"
description = "API-first open-source benchmark for evaluating LLM companions and proactive assistants across realistic multi-turn conversations."
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [{ name = "CompanionBench contributors" }]
keywords = [
    "llm",
    "benchmark",
    "evaluation",
    "companion",
    "proactive-assistant",
    "emotional-intelligence",
    "agents",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "typer>=0.12",
    "pydantic>=2.6",
    "httpx>=0.27",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Parquet/DuckDB export is intentionally optional; the core run/score loop never needs it.
export = ["polars>=1.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "mypy>=1.10",
    "types-pyyaml>=6.0",
]

[project.scripts]
companion-bench = "companion_bench.cli:app"

[project.urls]
Homepage = "https://github.com/companion-bench/companion-bench"
Documentation = "https://github.com/companion-bench/companion-bench/tree/main/docs"
Repository = "https://github.com/companion-bench/companion-bench"
Issues = "https://github.com/companion-bench/companion-bench/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/companion_bench"]

[tool.hatch.build.targets.sdist]
include = [
    "src/companion_bench",
    "tasks",
    "manifests",
    "docs",
    "README.md",
    "LICENSE",
    "NOTICE",
]

# ---------------------------------------------------------------------------
# Tooling configuration
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]
extend-exclude = ["runs"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "C4",     # flake8-comprehensions
    "ASYNC",  # flake8-async
    "PTH",    # flake8-use-pathlib
    "TID",    # flake8-tidy-imports
    "RUF",    # ruff-specific rules
]
# E501 (line length) is handled by the formatter; long string literals are allowed.
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["companion_bench"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra"
asyncio_mode = "auto"
filterwarnings = ["error"]

[tool.mypy]
python_version = "3.12"
files = ["src/companion_bench"]
strict = true
warn_unreachable = true
warn_unused_ignores = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["polars.*"]
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
